# demoOSG

./: CMakeLists.txt  README.md  cessnacallback.cpp  housemodel.cpp  housemodel.h  infocallback.cpp  main.cpp  rotatecallback.cpp
src/callback/: CMakeLists.txt
src/callback/include/callback/: anisotropiccallback.h  cessnacallback.h  dynamiclinecallback.h  filtercallback.h  imageupdatecallback.h  infocallback.h  rotatecallback.h  wrapcallback.h
src/callback/src/: anisotropiccallback.cpp  cessnacallback.cpp  dynamiclinecallback.cpp  filtercallback.cpp  imageupdatecallback.cpp  infocallback.cpp  rotatecallback.cpp  wrapcallback.cpp
src/handlers/: CMakeLists.txt
src/handlers/include/handlers/: keyboardhandler.h
src/handlers/src/: keyboardhandler.cpp
src/main/: CMakeLists.txt
src/main/include/main/: demodj.h  mainwindow.h  qtosgwidget.h
src/main/src/: demodj.cpp  main.cpp  mainwindow.cpp  qtosgwidget.cpp
src/precipitations/: CMakeLists.txt
src/precipitations/include/precipitations/: conduitprecipitation.h
src/precipitations/src/: conduitprecipitation.cpp
src/userScene/: CMakeLists.txt
src/userScene/include/userScene/: wallpapermodel.h
src/userScene/src/: housemodel.cpp  wallpapermodel.cpp
